--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     implementation 'com.gitee.xzkydz:Public_BluetoothPrinting:v2.0.2_beta1'
     implementation files('libs/CrashHelper.jar')
+    //bugly权限
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.8'
+    implementation 'com.tencent.bugly:nativecrashreport:3.6.0.1'
 }
