--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao' // apply plugin
+//定义得到当前日期的函数：
+def releaseTime() {
+    return new Date().format("yyyyMMdd", TimeZone.getTimeZone("UTC"))
+}
 
 android {
     compileSdkVersion 27
@@ -8,13 +12,19 @@ android {
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1 // Apk版本号 ：正整数，且新APK必须大于旧版APK才可以覆盖安装。
-        versionName "V2.19.03.01.0001" //APK版本名称：V2.18.08.23.0001 ，用于区分APK的版本。
+        versionName "V2.19.05.15.0001" //APK版本名称：V2.18.08.23.0001 ，用于区分APK的版本。
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    //在apk文件后边生成版本号信息
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "CDZ11W矿用电机无线多参数测试仪-${variant.name}-${variant.versionName}-${releaseTime()}.apk"
         }
     }
     sourceSets {
