--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.motor"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 2 // Apk版本号 ：正整数，且新APK必须大于旧版APK才可以覆盖安装。
-        versionName "V1.190621.0001" //APK版本名称：V2.18.08.23.0001 ，用于区分APK的版本。
+        versionCode 7 // Apk版本号 ：正整数，且新APK必须大于旧版APK才可以覆盖安装。
+        versionName "V1.190625.01" //APK版本名称：V2.18.08.23.0001 ，用于区分APK的版本。
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -58,7 +58,8 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     // add library
 //    implementation 'com.github.yknn:PublicFunction:v2.7.4'
-    implementation 'com.gitee.xzkydz:PublicUI:v2.0.9'
+//    implementation 'com.gitee.xzkydz:PublicUI:v2.0.9'
+    implementation 'com.gitee.xzkydz:PublicUI:v2.0.13'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     // 设置沉浸式菜单栏
