--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.motor"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 7 // Apk版本号 ：正整数，且新APK必须大于旧版APK才可以覆盖安装。
-        versionName "V1.190625.01" //APK版本名称：V2.18.08.23.0001 ，用于区分APK的版本。
+        versionCode 8 // Apk版本号 ：正整数，且新APK必须大于旧版APK才可以覆盖安装。
+        versionName "V1.190917.01" //APK版本名称：V2.18.08.23.0001 ，用于区分APK的版本。
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -75,7 +75,7 @@ dependencies {
     implementation 'com.github.yknn:SerialPortControl:v1.0'
     implementation 'com.github.barteksc:android-pdf-viewer:2.4.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
-    implementation 'com.gitee.xzkydz:Public_BluetoothPrinting:v2.0.2_beta1'
+    implementation 'com.gitee.xzkydz:Public_BluetoothPrinting:v2.1.0-beat.1'
     implementation files('libs/CrashHelper.jar')
     //bugly权限
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.8'
